fix sidebar covering chart tab button

--- a/site/client/css/sidebar.scss
+++ b/site/client/css/sidebar.scss
@@ -65,7 +65,6 @@
         position: absolute;
         top: 0;
         bottom: 0;
-        z-index: $zindex-sidebar;
         margin-left: -($sidebar-content-width + 2 * $padding-x-md) + $sidebar-closed-drawer-width;
         @include sm-only {
             margin-left: -($sidebar-content-width + 2 * $padding-x-md);
@@ -82,6 +81,7 @@
                 right: -$sidebar-toggle-width - $padding-x-sm/2;
             }
             button {
+                z-index: $zindex-sidebar;
                 position: sticky;
                 top: $vertical-spacing;
                 @include sm-only {
@@ -109,6 +109,7 @@
         }
 
         &.toggled {
+            z-index: $zindex-sidebar;
             margin-left: 0;
             @include block-shadow;
 
